# CourseSelectionSystem

./: CMakeLists.txt  README.md
include/: sys.h
src/: main.c  students.txt  sys.c  teachers.txt
